# github-actions-demo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: coverage.yml  deploy.yml  doc-preview.yml  qa.yml  tests.yml
LICENSES/: MIT.txt
doc/: conf.py  index.rst
src/dummy_pkg/: __init__.py  cli.py
tests/: test_cli.py
